# listy

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
documentation/html/: index.html  md__r_e_a_d_m_e.html  pages.html
documentation/html/search/: all_0.js  search.js
documentation/latex/: md__r_e_a_d_m_e.tex  refman.tex
src/: listy.c  main.c
src/single-list/: single-linked-list.c  single-linked-list.h
src/util/: vector.c  vector.h
src/vector/: vector.c  vector.h
tests/: greatest.h  main.c
tests/util/: vector.c
